--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   
   <div class="image-container">
     <h2>生成的画面</h2>
-    <img src="hualong.jpg" alt="画龙点睛生成画面">
+    <img src="generated-dragon-image.jpg" alt="画龙点睛生成画面">
   </div>
   
   <h2>生成过程简述</h2>
